# portfolio-sentiment-agent

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: daily_sentiment.yml
.streamlit/: config.toml
agents/: base_agent.py  email_agent.py  news_agent.py  orchestrator.py  portfolio_agent.py  risk_agent.py  schemas.py  sentiment_agent.py  summarization_agent.py
airflow/: README.md  deploy.sh  requirements.txt
airflow/config/: airflow.cfg
airflow/dags/: portfolio_sentiment_dag.py  portfolio_sentiment_dag_simple.py  portfolio_sentiment_dag_v2.py
airflow/plugins/: __init__.py
app/: run.sh  streamlit_app.py
config/: __init__.py  logging_config.py  portfolios.yaml  settings.py
db/: __init__.py  connection.py  models.py  schema.sql
db/migrations/: 001_initial_schema.py
docs/: PROJECT_SUMMARY.md  SENTIMENT_SENSITIVITY_PLAN.md  TECHNICAL_DOCUMENTATION.md  architecture.md
scripts/: debug_news_api.py  load_portfolios.py  measure_metrics.py  run_pipeline.py  seed_users.py  setup_example_user.py  test_openrouter.py  validate_sentiment.py
services/: email_service.py  finnhub_api.py  llm_service.py  news_api.py  portfolio_manager.py  sentiment_aggregator.py
tests/: conftest.py  test_news_agent.py  test_portfolio_agent.py  test_portfolio_manager.py
